# codex-fleetui

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md  SPEC.md  add-workers.sh  cap-swap-daemon.sh  claim-release-supervisor.sh  claim-trigger.sh  codex-fleet-2.sh  down.sh  fleet-state-anim.sh  fleet-tick-daemon.sh  fleet-tick.sh  force-claim.sh  full-bringup.sh  install.sh  justfile  plan-anim.sh  plan-tree-anim.sh  spawn-fleet.sh  stall-watcher.sh  style-tabs.sh  supervisor.sh  up.sh  warm-pool.sh  watcher-board.sh  waves-anim.sh  worker-prompt.md
.codex-fleet/: active-plan
.github/workflows/: README.md  ci-full.yml  ci.yml  cr.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
docs/: auto-reviewer.md  design-tokens.md  microsandbox-integration.md  recodee-extras.md  warp-design-reference.md
docs/future/: PROTOCOL.md
docs/future/decisions/: README.md  _template.md
docs/future/reviews/: README.md  _template.md
lib/: _env.sh
openspec/changes/agent-claude-claude-supervisor-classifier-audit-2026-05-15-22-25/: proposal.md  tasks.md
openspec/changes/agent-claude-fleet-pane-health-badge-column-2026-05-16-00-22/: proposal.md  tasks.md
openspec/changes/agent-claude-fleet-pane-health-socket-env-2026-05-16-00-41/: tasks.md
openspec/changes/agent-claude-fleet-watcher-resize-redraw-2026-05-16-01-11/: proposal.md  tasks.md
openspec/changes/agent-claude-ios-style-review-approval-queue-screen-2026-05-14-22-06/: notes.md
openspec/changes/agent-claude-pane-menu-arrow-nav-cursor-2026-05-16-01-11/: tasks.md
openspec/changes/agent-claude-review-pane-scanner-daemon-bringup-2026-05-14-23-06/: notes.md
openspec/changes/agent-claude-robust-paste-helper-2026-05-16-02-10/: tasks.md
openspec/changes/agent-claude-setup-spec-kit-2026-05-17-00-07/: proposal.md  tasks.md
openspec/changes/agent-claude-show-fleet-entrypoint-2026-05-16-00-53/: tasks.md
openspec/changes/agent-claude-tmux-menu-smart-top-row-2026-05-16-01-28/: tasks.md
openspec/changes/agent-claude-tui-fleet-metrics-viewer-2026-05-15-23-39/: tasks.md
openspec/changes/agent-claude-tui-fleet-pane-health-2026-05-15-23-39/: tasks.md
openspec/changes/agent-claude-tui-inbox-dedup-2026-05-15-23-39/: tasks.md
openspec/changes/agent-claude-tui-review-rubric-prepass-2026-05-15-23-38/: tasks.md
openspec/changes/agent-claude-wip-pre-dispatch-sync-2026-05-16-00-00/: tasks.md
openspec/changes/agent-codex-codex-fleet-parallel-polish-2026-05-14-2026-05-15-01-25/: tasks.md
rust/: .gitignore  Cargo.toml
rust/fleet-components/: Cargo.toml
rust/fleet-components/src/: lib.rs
rust/fleet-data/: Cargo.toml
rust/fleet-data/src/: accounts.rs  cache.rs  fleet.rs  git.rs  lib.rs  panes.rs  plan.rs  scores.rs  scrape.rs  subprocess.rs  tmux.rs  toposort.rs
rust/fleet-input/: Cargo.toml
rust/fleet-input/src/: action.rs  context.rs  keymap.rs  lib.rs  modal.rs
rust/fleet-launcher/: Cargo.toml
rust/fleet-launcher/src/: heartbeat.rs  lib.rs
rust/fleet-layout/: Cargo.toml
rust/fleet-layout/src/: lib.rs  preset.rs  tmux.rs
rust/fleet-metrics-viewer/: Cargo.toml
rust/fleet-metrics-viewer/src/: main.rs
rust/fleet-pane-health/: Cargo.toml
rust/fleet-pane-health/src/: main.rs
rust/fleet-plan-tree/: Cargo.toml
rust/fleet-plan-tree/src/: ios_page_design.rs  main.rs
rust/fleet-renderer-polish/: Cargo.toml
rust/fleet-renderer-polish/src/: lib.rs
rust/fleet-state/: Cargo.toml
rust/fleet-state/src/: ios_page_design.rs  main.rs
rust/fleet-state/tests/: ios_page_design.rs
rust/fleet-tab-strip/: Cargo.toml
rust/fleet-tab-strip/src/: main.rs
rust/fleet-tui-poc/: Cargo.toml  README.md
rust/fleet-tui-poc/src/: main.rs
rust/fleet-ui/: Cargo.toml
rust/fleet-ui/src/: button.rs  card.rs  chip.rs  keyboard_shortcut.rs  lib.rs  list.rs  notification.rs  overlay.rs  palette.rs  rail.rs  segmented_control.rs  session_switcher_overlay.rs  spotlight_filter.rs  spotlight_overlay.rs  tab_strip.rs  text_input.rs  tool_tip.rs
rust/fleet-ui/src/overlay/: context_menu.rs
rust/fleet-ui/src/snapshots/: fleet_ui__spotlight_overlay__tests__spotlight_default_render_design_b.snap
rust/fleet-ui/src/tab_strip/: layout.rs  mod.rs  render.rs
rust/fleet-ui/tests/: button_snapshot.rs  chip_snapshot.rs  overlay_context_menu.rs  overlay_spotlight.rs  rail_snapshot.rs  tab_strip_snapshot.rs
rust/fleet-ui/tests/snapshots/: button_snapshot__button_default_render.snap  chip_snapshot__chip_default_render.snap  overlay_context_menu__context_menu_default_render.snap  overlay_spotlight__spotlight_default_render.snap  rail_snapshot__rail_default_render.snap  tab_strip_snapshot__tab_strip_default_render.snap
rust/fleet-watcher/: Cargo.toml
rust/fleet-watcher/src/: ios_page_design.rs  main.rs
rust/fleet-waves/: Cargo.toml
rust/fleet-waves/src/: ios_page_design.rs  main.rs
rust/fleet-waves/src/snapshots/: fleet_waves__tests__fresh_tick_renders_ios_page.snap  fleet_waves__tests__stale_tick_renders_ios_page.snap
scripts/: agent-preflight.sh
scripts/codex-fleet/: README.md  accounts.example.yml  add-workers.sh  auto-reviewer.sh  cap-probe.sh  cap-swap-daemon.sh  claim-release-supervisor.sh  claim-trigger.sh  claude-spawn.sh  claude-supervisor.sh  claude-wake-prompt.md  claude-worker.sh  codex-fleet-2.sh  conductor-system-prompt.md  conductor.sh  dispatch-plan.sh  down.sh  fleet-config.toml.tmpl  fleet-state-anim.sh  fleet-tick-daemon.sh  fleet-tick.sh  force-claim.sh  full-bringup.sh  overview-header.sh  patch-codex-prompts.sh  plan-anim.sh  plan-tree-anim.sh  plan-tree-pin.sh  plan-watcher.sh  proactive-probe.sh  review-anim.sh  review-pane-scanner.sh  review-queue.sh  score-checkpoint.sh  score-merged-pr.sh  show-fleet.sh  spawn-fleet.sh  stall-watcher.sh  style-tabs.sh  supervisor.sh  (+8 more)
scripts/protocol/: check-budget.sh  check-refs.sh  check-states.sh  protocol-state.sh
skills/codex-fleet/: SKILL.md
test/: test-progress-rails.sh
vscode/guardex-active-agents/: README.md  extension.js
(+1172 files in other folders)
