[workspace]
resolver = "2"

# Keep the shared input crate explicit because it is the cross-dashboard input
# contract; fleet-layout is explicit because Lane B consumes its public DSL.
# The remaining fleet-* crates are picked up as their directories land.
members = ["fleet-input", "fleet-layout", "fleet-*"]
