[package]
name = "fleet-plan-tree"
version = "0.0.1"
edition = "2021"
description = "ratatui port of fleet-plan-tree-anim.sh."
publish = false

[[bin]]
name = "fleet-plan-tree"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
fleet-ui = { path = "../fleet-ui" }
fleet-data = { path = "../fleet-data" }
