[package]
name = "fleet-renderer-polish"
version = "0.0.1"
edition = "2021"
description = "Shared ratatui chrome primitives (rounded blocks, hairline dividers, iOS palette chips, page headers) for the codex-fleet dashboards. Library only; adoption by existing binaries is a separate follow-up."
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
ratatui = "0.30"
