[package]
name = "fleet-state"
version = "0.0.1"
edition = "2021"
description = "ratatui port of fleet-state-anim.sh."
publish = false

[[bin]]
name = "fleet-state"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
fleet-ui = { path = "../fleet-ui" }
fleet-data = { path = "../fleet-data" }
