[package]
name = "fleet-tab-strip"
version = "0.0.1"
edition = "2021"
description = "Thin ratatui binary that renders fleet_ui::tab_strip into a 1-row tmux header pane — used to give windows that aren't a full ratatui dashboard (e.g. the overview worker grid) the same navigation strip the dashboards draw."
publish = false

[[bin]]
name = "fleet-tab-strip"
path = "src/main.rs"

[dependencies]
# Workspace now on ratatui 0.30 (bumped from 0.28 in this same PR) so we
# share Frame/Rect types with tuirealm 4.1 — fleet-ui's TabStrip widget is
# imported directly, no inline duplication of the render code.
ratatui = "0.30"
crossterm = "0.29"
fleet-ui = { path = "../fleet-ui" }
# tuirealm — React/Elm-inspired component framework for ratatui.
# fleet-tab-strip is the proof-of-concept binary for the migration; the
# other dashboards (fleet-state, fleet-plan-tree, fleet-waves,
# fleet-watcher, fleet-tui-poc) follow in subsequent lanes.
tuirealm = "4.1"
