[package]
name = "fleet-tab-strip"
version = "0.0.1"
edition = "2021"
description = "Thin ratatui binary that renders fleet_ui::tab_strip into a 1-row tmux header pane — used to give windows that aren't a full ratatui dashboard (e.g. the overview worker grid) the same navigation strip the dashboards draw."
publish = false

[[bin]]
name = "fleet-tab-strip"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
fleet-ui = { path = "../fleet-ui" }
tuirealm = "4.1"
# Shared tuirealm helpers — terminal-adapter setup, shutdown, and
# tmux select-window dispatch. Replaces the open-coded versions of
# init_adapter / select_window that every dashboard binary writes.
# fleet-tab-strip is the first consumer.
fleet-components = { path = "../fleet-components" }
