[package]
name = "fleet-tui-poc"
version = "0.0.1"
edition = "2021"
description = "Throwaway POC: validates ratatui + truecolor + tmux mouse pass-through. Delete once the fleet-ui crate exists."
publish = false

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
# tuirealm — sixth and final binary ported (after #50/#52/#53/#54/#55).
# Wraps the existing render + overlay machinery as a single Component;
# per-overlay component splitting is a follow-up (the renderer is too
# entangled to break apart in one PR without a separate design pass).
tuirealm = "4.1"
