[package]
name = "fleet-ui"
version = "0.0.1"
edition = "2021"
description = "Shared ratatui widgets and iOS-style chrome for codex-fleet dashboards."
publish = false

[dependencies]
crossterm = "0.29"
ratatui = "0.30"
# tab_strip reads /tmp/claude-viz/fleet-tab-counters.json for the per-tab badge
# counters — re-introduced here when the strip module was reopened for the
# fleet-tab-strip binary that hosts the overview header pane.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Spotlight overlay fuzzy filter. This is the matcher engine extracted from
# skim (https://github.com/skim-rs/skim) — same SkimMatcherV2 algorithm
# fzf-style pickers use, published as a standalone crate so we don't pull
# in skim's full ncurses + TUI stack (we render in ratatui ourselves).
fuzzy-matcher = "0.3"

[dev-dependencies]
insta = "1"
