[package]
name = "fleet-waves"
version = "0.0.1"
edition = "2021"
description = "ratatui port of fleet-waves-anim.sh."
publish = false

[[bin]]
name = "fleet-waves"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
fleet-ui = { path = "../fleet-ui" }
fleet-data = { path = "../fleet-data" }
# tuirealm — fourth binary ported (fleet-tab-strip #50, fleet-state #52,
# fleet-plan-tree #53, fleet-waves this PR).
tuirealm = "4.1"
